--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,10 +3,10 @@
       
       "Balanç total": "Total Balance",
       "Setmana": "Week",
-      "Despeses - Última setmana": "Expenses - Last week",
+      "Tittle": "Expenses - Last week",
       
       "Despeses avui": "Expenses today",
-      "week-days": {
+      "Week-days": {
         "dilluns": "Monday",
         "dimarts": "Tuesday",
         "dimecres": "Wednesday",
