Exercici-8-N3 + Titulos para la semana

--- a/public/locales/ca/translation.json
+++ b/public/locales/ca/translation.json
@@ -4,6 +4,8 @@
       "Balanç total": "Balanç total",
       "Setmana": "Setmana",
       "Tittle": "Despeses - Última setmana",
+      "FirstWeekTitle": "Despeses - Primera setmana",
+      "RegularSetmana": "Despeses - setmana",
       
       "Despeses avui": "Despeses avui",
       "Week-days": {
