--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,6 +4,8 @@
       "Balanç total": "Total Balance",
       "Setmana": "Week",
       "Tittle": "Expenses - Last week",
+      "FirstWeekTitle": "Expenses - First week",
+      "RegularSetmana": "Expenses - week",
       
       "Despeses avui": "Expenses today",
       "Week-days": {
