--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -4,6 +4,8 @@
       "Balanç total": "Balance total",
       "Setmana": "Semana",
       "Tittle": "Gastos - Última semana",
+      "FirstWeekTitle": "Gastos - Primera semana",
+      "RegularSetmana": "Gastos - semana",
       
       "Despeses avui": "Gastos-hoy",
       "Week-days": {
